# neonAcc

./: CMakeLists.txt  jni_neon.cpp  neonAcc.cpp  neonAcc.h
math_neon/: math_neon.h
